--- a/style.css
+++ b/style.css
@@ -1,96 +1,130 @@
 /* google fonts  */
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    font-family: 'Lato', sans-serif;
-    display: flex;
-    flex-wrap: wrap;
-    line-height: 25px;
+  margin: 0;
+  font-family: "Lato", sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  line-height: 25px;
 }
 
 #navbar {
-    background-color: #eee;
-    min-width: 290px;
-    top: 0;
-    left: 0;
-    width: 300px;
-    height: 100vh;
-    border-right: solid;
-    border-color: #777;
-    margin-right: 3px;
-    position: fixed;
+  background-color: #eee;
+  position: fixed;
+  min-width: 290px;
+  top: 0;
+  left: 0;
+  width: 300px;
+  height: 100vh;
+  border-right: solid;
+  border-color: #777;
+  margin-right: 3px;
 }
 
+header {
+  color: #000;
+  margin: 10px;
+  text-align: center;
+  font-size: 1.8em;
+  padding: 10px 0;
+}
+
+#navbar ul {
+    height: 88%;
+    padding: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+#navbar li {
+    color: #4d4e53;
+    border-top: 1px solid;
+    list-style: none;
+    position: relative;
+    width: 100%;
+}
+
+.nav-link {
+  display: block;
+  padding: 10px 30px;
+  color: #4d4e53;
+  text-decoration: none;
+  cursor: pointer;
+  border: 1px solid rgb(190, 190, 190);
+}
+
+#main-doc {
+  margin-left: 350px;
+  margin-right: 30px;
+  color: #4d4e53;
+}
+
+#main-doc header {
+  text-align: left;
+  margin-top: 30px;
+  margin-left: 0;
+}
+
+p {
+  margin-top: 20px;
+}
+
+code {
+  display: block;
+  text-align: left;
+  white-space: pre-line;
+  position: relative;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 2;
+  background-color: #f7f7f7;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 5px;
+}
+
+li {
+  line-height: 2.5;
+}
+
+@media (max-width: 700px) {
+  body {
+    margin: 0;
+    font-family: "Lato", sans-serif;
+    display: flex;
+    flex-wrap: wrap;
+    line-height: 25px;
+    font-size: small;
+  }
+  
 header {
     color: #000;
     margin: 10px;
     text-align: center;
     font-size: 1.8em;
-    padding: 10px 0;
-}
-
-.nav-link {
-    display: block;
-    padding: 10px 30px;
-    text-decoration: none;
-    cursor: pointer;
-    border: 1px solid rgb(190, 190, 190);
-    color: #4d4e53;
-}
-
-#main-doc {
-    margin-left: 350px;
-    margin-right: 30px;
-    color: #4d4e53;
-}
-
-#main-doc header {
-    text-align: left;
-    margin-top: 30px;
-    margin-left: 0;
-}
-
-p {
-    margin-top: 20px;
-}
-
-code {
-    display: block;
-    text-align: left;
-    white-space: pre-line;
+    padding: 0;
+  }
+  #navbar {
+    border-right: none;
+    border-bottom: 2px solid #777;
+    height: 300px;
+    overflow-y: scroll;
+    width: 100%;
     position: relative;
-    word-break: normal;
-    word-wrap: normal;
-    line-height: 2;
-    background-color: #f7f7f7;
-    padding: 15px;
-    margin: 10px;
-    border-radius: 5px;
-}
-
-li {
-    line-height: 2.5;
-}
-
-@media (max-width: 700px) {
-    body {
-        flex-direction: column;
-    }
-    #navbar {
-        border-right: none;
-        border-bottom: 2px solid #777;
-        height: 200px;
-        overflow-y: scroll;
-        width: 100%;
-    }
-    main {
-        display: block;
-        height: auto;
-        width: 100%;
-    }
+  }
+  .nav-link {
+    display: block;
+    padding: 0px 30px;
+  }
+  #main-doc {
+    margin-left: 30px;
+    margin-right: 30px;
+    padding-top: 0;
+    color: #4d4e53;
+  }
 }
