--- a/style.css
+++ b/style.css
@@ -15,10 +15,11 @@ body {
   display: flex;
   flex-wrap: wrap;
   line-height: 25px;
+  background-color: #F5F5F5;
 }
 
 #navbar {
-  background-color: #eee;
+  background-color: #ECB365;
   position: fixed;
   min-width: 290px;
   top: 0;
@@ -26,16 +27,16 @@ body {
   width: 300px;
   height: 100vh;
   border-right: solid;
-  border-color: #777;
+  border-color: #393B44;
   margin-right: 3px;
 }
 
 header {
-  color: #000;
-  margin: 10px;
+  color: #fff;
+  padding: 20px;
   text-align: center;
   font-size: 1.8em;
-  padding: 10px 0;
+  background-color: #393B44;
 }
 
 #navbar ul {
@@ -43,10 +44,10 @@ header {
     padding: 0;
     overflow-y: auto;
     overflow-x: hidden;
+    margin-top: 0;
 }
 
 #navbar li {
-    color: #4d4e53;
     border-top: 1px solid;
     list-style: none;
     position: relative;
@@ -55,17 +56,21 @@ header {
 
 .nav-link {
   display: block;
-  padding: 10px 30px;
-  color: #4d4e53;
+  padding: 2px 30px;
+  color: #52616B;
   text-decoration: none;
   cursor: pointer;
   border: 1px solid rgb(190, 190, 190);
 }
 
+.nav-link:hover {
+    color: #1E2022;
+}
+
 #main-doc {
   margin-left: 350px;
   margin-right: 30px;
-  color: #4d4e53;
+  color: #393B44;
 }
 
 #main-doc header {
@@ -86,7 +91,7 @@ code {
   word-break: normal;
   word-wrap: normal;
   line-height: 2;
-  background-color: #f7f7f7;
+  background-color: #AAAAAA;
   padding: 15px;
   margin: 10px;
   border-radius: 5px;
@@ -106,15 +111,15 @@ li {
   }
   
 header {
-    color: #000;
     margin: 15px;
     text-align: center;
     font-size: 1.8em;
     padding: 0;
   }
+
   #navbar {
     border-right: none;
-    border-bottom: 2px solid #777;
+    border-bottom: 2px solid #1E2022;
     height: 300px;
     overflow-y: scroll;
     width: 100%;
